# harness-agent-system

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  checkpoints.sqlite-shm  checkpoints.sqlite-wal  graph.json  main.py  pyproject.toml  start_custom_server.py  start_server.py  更新日志.md  贡献指南.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl  store.pckl
data/: checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal
data_test/: cp.sqlite  st.sqlite
docker/: .dockerignore  Dockerfile
docs/: api.md  architecture.md  deployment.md
fecmall_check/: account_edit.html  account_edit_submit.html  address_edit_change_country.html  address_edit_init.html  address_edit_submit.html  alipay_standard_review.html  alipay_standard_start.html  cart.html  cart_update.html  category.html  category_product.html  checkmoney_start.html  contacts_submit.html  coupon_add.html  coupon_cancel.html  customer.html  customer_address.html  customer_address_remove.html  customer_contacts.html  customer_login.html  customer_login_submit.html  customer_order_init.html  customer_order_reorder.html  customer_order_view.html  customer_register.html  customer_register_submit.html  customer_review.html  favorite_list.html  favorite_remove.html  forgot_password_init.html  forgot_password_send_code.html  onepage.html  onepage_change_country.html  onepage_update_info.html  payment_success.html  paypal_express_review.html  paypal_express_start.html  paypal_express_submit.html  paypal_standard_review.html  paypal_standard_start.html  (+8 more)
src/: .env
src/app/: README.md  __init__.py  main.py
src/app/agents/: __init__.py  agent.py  agent_example.py  agnet.py
src/app/api/: __init__.py  agent.py  agent_endpoints.py
src/app/core/: __init__.py  config.py  llms.py  state.py
src/app/examples/: docling_pdf_parser_demo.py  pdf_llm_testing.py  pdf_parser_demo.py  test_mcp_client.py  test_mcp_tavily.py  test_mcp_with_auth.py
src/app/logger/: __init__.py  logger_config.py
src/app/mcp_server/: __init__.py  mcp_server_math.py
src/app/mcp_server/fecmall_mcp/: __init__.py  client.py  config.py  fecmall_mcp_server.py  mcp_server_client.py  server.py
src/app/mcp_server/fecmall_mcp/tools/: __init__.py  address.py  auth.py  cart.py  category.py  customer_account.py  customer_contacts.py  customer_favorite.py  customer_password.py  customer_register.py  customer_review.py  onepage.py  order.py  payment.py  product.py  product_detail.py
src/app/middleware/: __init__.py  pdf_parse_middleware.py
src/app/processors/: __init__.py  docling_pdf_parser.py  pdf_cache.py  pdf_parser.py
src/app/schema/: __init__.py  request.py  response.py
src/app/test/: test_batch.json  test_docling.py
src/app/test/StreamingResponse_/: LOGIC.md
src/app/test/test_restful/: test_client.py
src/app/tools/: __init__.py  docling_pdf_tool.py  mcp_client_builder.py  pdf_parse_tool.py  pdf_tool.py  test_tools.py  weather_tool.py
src/app/utils/: __init__.py  helpers.py
src/app/workspace/skills/fecmall_skills/fecmall-address/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-auth/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-cart/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-checkout/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-favorite/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-order/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-payment/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-product/: SKILL.md
src/app/workspace/skills/fecmall_skills/fecmall-review/: SKILL.md
src/tools/: __init__.py  tools.py
tests/: README.md  conftest.py
tests/unit/: test_api.py  test_config.py  test_health.py  test_pdf_tool.py  test_schema.py  test_weather_tool.py
