[project]
name = "harness-agent-system"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.5"
dependencies = [
    "agent-skills-cli>=0.1.1",
    "aiosqlite>=0.22.1",
    "deepagents>=0.6.4",
    "docling>=2.95.0",
    "docling-core[chunking]>=2.77.0",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "fastmcp>=3.4.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-docling>=2.0.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-pymupdf4llm>=0.5.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
    "logger>=1.4",
    "mcp>=1.27.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "skills-ref>=0.1.1",
]
