# ============================================================
# Harness Agent System - Python Package Configuration
# ============================================================

[project]
name = "harness-agent-system"
version = "0.1.0"
description = "基于 LangGraph 和 MCP 的智能 Agent 系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13.5"
authors = [
    { name = "CongPeiQiang", email = "congpeiqiang@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "deepagents>=0.6.4",
    "docling>=2.95.0",
    "docling-core[chunking]>=2.77.0",
    "fastapi>=0.137.1",
    "fastmcp>=3.4.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-docling>=2.0.0",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-pymupdf4llm>=0.5.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
    "loguru>=0.7.0",
    "mcp>=1.27.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/harness-agent-system"
Repository = "https://github.com/your-org/harness-agent-system"
Documentation = "https://github.com/your-org/harness-agent-system#readme"
Issues = "https://github.com/your-org/harness-agent-system/issues"
Changelog = "https://github.com/your-org/harness-agent-system/blob/main/更新日志.md"

# ============================================================
# Build System
# ============================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ============================================================
# Ruff - Code Formatting and Linting
# ============================================================

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",    # 行长度（由格式化器处理）
    "B008",    # 默认参数中的函数调用
    "N802",    # 函数名应为小写（LangChain 约定）
    "N803",    # 参数名应为小写
    "N806",    # 函数中的变量应为小写
    "T201",    # 发现 print（允许在脚本中使用）
    "RUF012",  # 可变类属性（Pydantic 模型）
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================================
# MyPy - Static Type Checking
# ============================================================

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 渐进式类型检查
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langchain_mcp_adapters.*",
    "mcp.*",
    "deepagents.*",
    "docling.*",
    "docling_core.*",
    "fastmcp.*",
    "watchfiles.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest - Testing Configuration
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: 单元测试（快速，无外部依赖）",
    "integration: 集成测试（可能需要服务）",
    "e2e: 端到端测试（完整栈）",
    "slow: 慢速测试",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

# ============================================================
# Coverage - Code Coverage Configuration
# ============================================================

[tool.coverage.run]
source = ["src/app"]
branch = true
omit = [
    "*/tests/*",
    "*/test/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/mcp_server/fecmall_mcp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"
